--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,22 +1,22 @@
-#input {
+#inputText {
 	width: auto;
-	height: 100px;
+	height: 150px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
-	font-size: 14px;
+	font-size: 12px;
 	font-family: monospace;
 	overflow: auto;
 	text-decoration:none;
 }
 
-#output {
+#outputText {
 	width: auto;
-	height: 100px;
+	height: 150px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
-	font-size: 14px;
+	font-size: 12px;
 	font-family: monospace;
 	overflow: auto;
 }
