--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,13 +1,13 @@
 #inputText {
 	width: auto;
-	height: 150px;
+	height: 300px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
-	font-size: 12px;
+	font-size: 14px;
 	font-family: monospace;
 	overflow: auto;
-	text-decoration:none;
+	text-decoration: none;
 }
 
 #outputText {
@@ -16,11 +16,29 @@
 	padding: 10px;
 	background-color: #444;
 	color: white;
-	font-size: 12px;
+	font-size: 14px;
 	font-family: monospace;
 	overflow: auto;
 }
 
-.wrongWord {
-	color: red;
+.tooltip {
+	top: -10px;
+	opacity: 0;
+	position: absolute;
+	transition: all 0.5s ease;
+	padding: 5px;
+	color: #333;
+	border-radius: 10px;
+	margin-top: 10px;
+}
+
+.hover:hover .tooltip {
+	opacity: 1;
+	background: yellow;
+	margin-top: 25px;
+	margin-left: -35px;
+}
+
+.hover {
+	position:relative;
 }
