--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,6 +1,6 @@
 #inputText {
 	width: auto;
-	height: 300px;
+	height: 150px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
@@ -30,13 +30,15 @@
 	color: #333;
 	border-radius: 10px;
 	margin-top: 10px;
+	width: 0%;
 }
 
 .hover:hover .tooltip {
 	opacity: 1;
 	background: yellow;
 	margin-top: 25px;
-	margin-left: -35px;
+	margin-left: -50px;
+	width: 1000%;
 }
 
 .hover {
