--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,6 +1,6 @@
 #inputText {
 	width: auto;
-	height: 150px;
+	height: 100px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
@@ -12,7 +12,7 @@
 
 #outputText {
 	width: auto;
-	height: 150px;
+	height: 100px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
@@ -43,4 +43,24 @@
 
 .hover {
 	position:relative;
+}
+
+.node {
+	cursor: pointer;
+}
+
+.node circle {
+	fill: #fff;
+	stroke: steelblue;
+	stroke-width: 1.5px;
+}
+
+.node text {
+	font: 13px sans-serif;
+}
+
+.link {
+	fill: none;
+	stroke: #ccc;
+	stroke-width: 1.5px;
 }
