--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,6 +1,6 @@
 #inputText {
 	width: auto;
-	height: 100px;
+	height: 40px;
 	padding: 10px;
 	background-color: #444;
 	color: white;
@@ -22,9 +22,10 @@
 }
 
 .tooltip {
+	z-index: 2000;
 	top: -10px;
-	opacity: 0;
-	position: absolute;
+	opacity: 0.3;
+	/*position: absolute;*/
 	transition: all 0.5s ease;
 	padding: 5px;
 	color: #333;
@@ -34,10 +35,11 @@
 }
 
 .hover:hover .tooltip {
+	z-index: 2000;
 	opacity: 1;
 	background: yellow;
 	margin-top: 25px;
-	margin-left: -50px;
+	margin-left: 20px;
 	width: 1000%;
 }
 
