--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -11,8 +11,8 @@
 }
 
 #outputText {
-	width: auto;
-	height: 100px;
+	width: 20vw;
+	height: 88vh;
 	padding: 10px;
 	background-color: #444;
 	color: white;
@@ -120,7 +120,9 @@
 }
 
 #d3-graph {
-	width: 100%;
+	margin-left: 10px;
+	width: 75vw;
+	height: 88vh;
 	border:2px solid #000;
 	overflow-x: scroll;
 	overflow-y: hidden;
